fix z-index webslite

--- a/webslite.html
+++ b/webslite.html
@@ -2,12 +2,7 @@
 <html>
 <head>
     <title>Webslite - Turn Website into Webslide</title>
-    <style>
-        body {
-            min-width: 357px;
-            overflow-x: hidden;
-        }
-    </style>
+<link href="css/webslide.css" rel="stylesheet">
 <script src="js/jquery-2.1.1.min.js"></script>
 <script src="js/webslite_out.js"></script>
 </head>
