remove maquetes directory and apply z-index to slider wrapper

--- a/webslite.html
+++ b/webslite.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <title>Webslite - Turn Website into Webslide</title>
-<link href="css/webslide.css" rel="stylesheet">
-<script src="js/jquery-2.1.1.min.js"></script>
-<script src="js/webslite_out.js"></script>
+	<title>Webslite - Turn Website into Webslide</title>
+	<link href="css/webslite.css" rel="stylesheet">
+	<script src="js/jquery-2.1.1.min.js"></script>
+	<script src="js/webslite_out.js"></script>
 </head>
 <body>
 loading results ...<br>
