restructure extension use node

--- a/unpacked/webslite.html
+++ b/unpacked/webslite.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Webslite - Turn Website into Webslide</title>
-	<link href="css/webslite.css" rel="stylesheet">
+	<link href="src/min/css/main.min.css" rel="stylesheet">
 	<script src="js/jquery-2.1.1.min.js"></script>
-	<script src="js/webslite_out.js"></script>
+	<script src="src/min/js/out.js"></script>
 </head>
 <body>
-loading results ...<br>
-<span id="activate">activate</span>
+	loading results ...<br>
+	<span id="activate">activate</span>
 </body>
 </html>
