--- a/unpacked/webslite.html
+++ b/unpacked/webslite.html
@@ -4,10 +4,13 @@
 	<title>Webslite - Turn Website into Webslide</title>
 	<link href="src/min/css/main.min.css" rel="stylesheet">
 	<script src="js/jquery-2.1.1.min.js"></script>
-	<script src="src/min/js/out.js"></script>
+	<script src="src/min/js/out.min.js"></script>
 </head>
 <body>
-	loading results ...<br>
-	<span id="activate">activate</span>
+	loading results ...
+	<br>
+	<span id="activate">
+		activate
+	</span>
 </body>
 </html>
